    stackprotectorstrong. Thanks to Romain Francoise <rfrancoise@debian.org>.
  * Documentation:
    - Merge binary:Package descriptions in dpkg-query(1).
    - Split --remove and --purge options in dpkg(1). This also clarifies on
      which package states each option can operate. Closes: #576338
    - Remove duplicate “of the” in dpkg-maintscript-helper(1).

  [ Updated programs translations ]
  * Czech (Miroslav Kure).
  * German (Sven Joachim).
  * Vietnamese (Trần Ngọc Quân).

  [ Updated manpages translations ]
  * French (Jean-Pierre Giraud, Vincent Thomas, Raphaël Hertzog).

  [ Updated scripts translations ]
  * French (Raphaël Hertzog).
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Fri, 15 Aug 2014 04:37:57 +0200

dpkg (1.17.12) unstable; urgency=low

  [ Guillem Jover ]
  * Only build the compatibility selinux code if libselinux is available or
    the user requested it. Also fixes build failures on non-Linux systems.
    Closes: #757637
  * Documentation:
    - Add a short description to each virtual field in dpkg-query(1), and
      mention the version they got introduced in dpkg.
    - Fix formatting of last paragraphs inside dselect(1) --color description.
  * Rework dselect columns code, to make it easier to maintain and read.
  * Add new architecture columns to dselect package list view. The new
    columns, shown by default, can be turned off with the new ‘A’ key,
    or bound to another key via the new “archdisplay” keybinding.
  * Fix a descriptor leak on dselect subprocesses when --debug is used.
  * Use «tar --format=gnu» when creating source archives. This makes sure we
    get a deterministic output format, regardless of what tar defaults to.
    Thanks to Jan Blunck <jblunck@infradead.org>..
  * Use perl's length instead of defined when checking some environment
    variables, if we require them to have content.
  * Allow specifying the same build type option multiple times in