@@ -10,6 +10,8 @@ dpkg (1.17.13) UNRELEASED; urgency=low
     - Split --remove and --purge options in dpkg(1). This also clarifies on
       which package states each option can operate. Closes: #576338
     - Remove duplicate “of the” in dpkg-maintscript-helper(1).
+  * Fix dpkg-maintscript-helper dir_to_symlink to handle relative symlink
+    targets. Thanks to Helmut Grohne <helmut@subdivi.de>.
 
   [ Updated programs translations ]
   * Czech (Miroslav Kure).
